--- a/main.html
+++ b/main.html
@@ -7,8 +7,9 @@
 </head>
 
 <body>
-	<!-- the entire body must be written by student -->
+	<!-- the entire body must be written by the student -->
     <script type="text/javascript" src="./script.js">
+		
 </script>
 
 </body>
